# archetype-rust-cli-workspace

./: README.md  archetype.toml  archetype.yaml  requirements.yml
contents/{{ artifact-id }}/: Cargo.toml  README.md
contents/{{ artifact-id }}/{{ artifact-id }}-cli/: Cargo.toml
contents/{{ artifact-id }}/{{ artifact-id }}-cli/src/: main.rs
contents/{{ artifact-id }}/{{ artifact-id }}-cli/src/cli/: mod.rs
contents/{{ artifact-id }}/{{ artifact-id }}-lib/: Cargo.toml
