[package]
name = "{{ artifact-id }}-cli"
version = "0.1.0"
authors = ["{{ author_full }}"]
edition = "2018"

[[bin]]
name = "{{ artifact-id }}"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
{{ artifact-id }} = { path = "../{{ artifact-id }}-lib" }
clap = "2"
log = "0.4"
loggerv = "0.7"
